# Anisotropy

./: Anisotropy.cpp  Anisotropy.h  Anisotropy.pro  AnisotropyView.qml  Bio2DImage.cpp  Bio2DImage.h  Bio2DImageView.cpp  Bio2DImageView.h  BioImage.cpp  BioImage.h  BioImageManager.cpp  BioImageManager.h  BioImageProvider.cpp  BioImageProvider.h  BioImageViewer.cpp  BioImageViewer.h  CMakeLists.txt  ChartDisplay.qml  ColorTable.cpp  ColorTable.h  Common.cpp  Common.h  ControlSlider.qml  Controller.js  DataModel.cpp  DataModel.h  HistogramView.qml  ImageContainer.qml  ImageContainer_.qml  ImageFlickArea.qml  ImageScrollArea.qml  NewInputDialog.qml  OldApplicationContainer.qml  OldImageScrollArea.qml  OldImageVisualizer.qml  RowMajorCalculation.md  ScrollBar.qml  SplitImageView.qml  ThresholdSlider.qml  TiffReader.cpp  (+8 more)
